# StratIQ

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  pyproject.toml  requirements.txt  test_anthropic_direct.py  test_ask.py  test_db.py
backend/app/: config.py  main.py
backend/app/agents/: analyst.py  arbiter.py  comms.py  planner.py  researcher.py  risk_compliance.py
backend/app/api/routes/: actions.py  (+6 more)
backend/app/core/: config.py
backend/app/db/: client.py  session.py
backend/app/schemas/: __init__.py  actions.py  uploads.py
backend/app/services/: audit_service.py  llm.py  orchestrator.py
backend/scripts/: probe_delete_session.py  probe_intent_sql.py  probe_migrations.py  probe_pipeline_cards.py  probe_rag.py  probe_response_prompt.py  probe_rls.py  seed.py  smoke_action_planner.py  smoke_actions.py  smoke_keys.py  smoke_meeting_planner.py  smoke_pipeline_actions.py  smoke_unstructured_uploads.py
backend/supabase/: schema.sql
backend/supabase/migrations/: 001_chat_sessions.sql  002_action_tiers.sql  003_actions_soft_delete.sql  004_meeting_ics_type.sql  005_user_profiles_self_select_rls.sql  006_actions_query_id_set_null.sql
backend/test_data/uploads/: churn_signals_batch1.csv  churn_signals_batch2.csv  compensation_bands_batch1.csv  compensation_bands_batch2.csv  compensation_batch1.csv  compensation_batch2.csv  csm_notes_batch1.csv  customers_batch1.csv  customers_batch2.csv  employees_batch1.csv  employees_batch2.csv  kpis_batch1.csv  kpis_batch2.csv  survey_responses_batch1.csv
(+212 files in other folders)
